--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   # Selector de archivos (web, desktop, móvil)
   file_picker: ^8.0.0+1
 
+  google_fonts: ^8.0.0
+
+  font_awesome_flutter: ^10.12.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,8 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
