--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
 
   font_awesome_flutter: ^10.12.0
 
+  dotted_border: ^3.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
