--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
 
   dotted_border: ^3.1.0
 
+  # Web APIs compatible con dart2wasm (sustituye dart:html)
+  web: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
