dart:html changed to  dartLjs_interop to make recaptcha work with web assembly

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,12 @@
       "name": "Flutter (Chrome, port 80)",
       "request": "launch",
       "type": "dart",
+      "flutterMode": "profile",
       "args": [
         "-d",
         "chrome",
-        "--web-port=80"
+        "--web-port=80",
+        "--wasm"
       ]
     }
   ]
